--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -56,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "635"
+       "612"
       ]
      },
      "execution_count": 2,
@@ -84,6 +84,637 @@
     "\n",
     "# Print the city count to confirm sufficient count\n",
     "len(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['busselton',\n",
+       " 'mataura',\n",
+       " 'carnarvon',\n",
+       " 'cayenne',\n",
+       " 'yulara',\n",
+       " 'san patricio',\n",
+       " 'hihifo',\n",
+       " 'castro',\n",
+       " 'ushuaia',\n",
+       " 'mpika',\n",
+       " 'klaksvik',\n",
+       " 'anadyr',\n",
+       " 'rikitea',\n",
+       " 'bredasdorp',\n",
+       " 'bengkulu',\n",
+       " 'illoqqortoormiut',\n",
+       " 'tuktoyaktuk',\n",
+       " 'beroroha',\n",
+       " 'berlevag',\n",
+       " 'andenes',\n",
+       " 'batsfjord',\n",
+       " 'albany',\n",
+       " 'new norfolk',\n",
+       " 'mar del plata',\n",
+       " 'kloulklubed',\n",
+       " 'saint-joseph',\n",
+       " 'kunyang',\n",
+       " 'rameswaram',\n",
+       " 'taolanaro',\n",
+       " 'baruun-urt',\n",
+       " 'pasighat',\n",
+       " 'kyzyl-suu',\n",
+       " 'necochea',\n",
+       " 'hermanus',\n",
+       " 'constitucion',\n",
+       " 'warqla',\n",
+       " 'nguiu',\n",
+       " 'zhigansk',\n",
+       " 'dikson',\n",
+       " 'kutum',\n",
+       " 'jamestown',\n",
+       " 'margate',\n",
+       " 'nizhneyansk',\n",
+       " 'kahului',\n",
+       " 'port alfred',\n",
+       " 'kapaa',\n",
+       " 'tidore',\n",
+       " 'aberdeen',\n",
+       " 'vardo',\n",
+       " 'puerto ayora',\n",
+       " 'kaitangata',\n",
+       " 'qaanaaq',\n",
+       " 'souillac',\n",
+       " 'kushima',\n",
+       " 'belushya guba',\n",
+       " 'meulaboh',\n",
+       " 'poli',\n",
+       " 'jacqueville',\n",
+       " 'saint-pierre',\n",
+       " 'port lincoln',\n",
+       " 'tadine',\n",
+       " 'tura',\n",
+       " 'orange',\n",
+       " 'moron',\n",
+       " 'kenora',\n",
+       " 'san cristobal',\n",
+       " 'correntina',\n",
+       " 'sibolga',\n",
+       " 'nikolskoye',\n",
+       " 'grand gaube',\n",
+       " 'vaini',\n",
+       " 'hauterive',\n",
+       " 'port hedland',\n",
+       " 'olafsvik',\n",
+       " 'pacific grove',\n",
+       " 'dinsor',\n",
+       " 'njeru',\n",
+       " 'chokurdakh',\n",
+       " 'loa janan',\n",
+       " 'ribeira grande',\n",
+       " 'atuona',\n",
+       " 'penzance',\n",
+       " 'kourou',\n",
+       " 'hilo',\n",
+       " 'gushikawa',\n",
+       " 'bethel',\n",
+       " 'drovyanaya',\n",
+       " 'punta arenas',\n",
+       " 'barrow',\n",
+       " 'toliary',\n",
+       " 'santa isabel do rio negro',\n",
+       " 'saldanha',\n",
+       " 'ponta delgada',\n",
+       " 'cody',\n",
+       " 'daru',\n",
+       " 'tuatapere',\n",
+       " 'iskateley',\n",
+       " 'talnakh',\n",
+       " 'grand river south east',\n",
+       " 'jumla',\n",
+       " 'ponta do sol',\n",
+       " 'sitka',\n",
+       " 'saskylakh',\n",
+       " 'monte plata',\n",
+       " 'juegang',\n",
+       " 'mitsamiouli',\n",
+       " 'bathsheba',\n",
+       " 'bulawayo',\n",
+       " 'torbay',\n",
+       " 'luderitz',\n",
+       " 'kavaratti',\n",
+       " 'yellowknife',\n",
+       " 'hobart',\n",
+       " 'airai',\n",
+       " 'gari',\n",
+       " 'malwan',\n",
+       " 'nyurba',\n",
+       " 'bluff',\n",
+       " 'proddatur',\n",
+       " 'kotido',\n",
+       " 'flinders',\n",
+       " 'ancud',\n",
+       " 'cidreira',\n",
+       " 'mwene-ditu',\n",
+       " 'cape town',\n",
+       " 'aflu',\n",
+       " 'boyabat',\n",
+       " 'east london',\n",
+       " 'kharitonovo',\n",
+       " 'amderma',\n",
+       " 'san antonio',\n",
+       " 'bull savanna',\n",
+       " 'codrington',\n",
+       " 'provideniya',\n",
+       " 'baglan',\n",
+       " 'butaritari',\n",
+       " 'tautira',\n",
+       " 'tiksi',\n",
+       " 'ferkessedougou',\n",
+       " 'shizukuishi',\n",
+       " 'gairo',\n",
+       " 'lajas',\n",
+       " 'port elizabeth',\n",
+       " 'leningradskiy',\n",
+       " 'clyde river',\n",
+       " 'barentsburg',\n",
+       " 'attawapiskat',\n",
+       " 'yining',\n",
+       " 'great yarmouth',\n",
+       " 'dolores',\n",
+       " 'mareeba',\n",
+       " 'vaitupu',\n",
+       " 'shingu',\n",
+       " 'cairns',\n",
+       " 'naze',\n",
+       " 'gurupi',\n",
+       " 'kwekwe',\n",
+       " 'maceio',\n",
+       " 'san quintin',\n",
+       " 'tigil',\n",
+       " 'the valley',\n",
+       " 'yerbogachen',\n",
+       " 'coquimbo',\n",
+       " 'provost',\n",
+       " 'victoria',\n",
+       " 'ilulissat',\n",
+       " 'machiques',\n",
+       " 'owensboro',\n",
+       " 'abonnema',\n",
+       " 'hithadhoo',\n",
+       " 'kolondieba',\n",
+       " 'cherskiy',\n",
+       " 'longyearbyen',\n",
+       " 'vitim',\n",
+       " 'sinnamary',\n",
+       " 'saint-philippe',\n",
+       " 'amberley',\n",
+       " 'mora',\n",
+       " 'georgetown',\n",
+       " 'labutta',\n",
+       " 'samusu',\n",
+       " 'faanui',\n",
+       " 'bandarbeyla',\n",
+       " 'palana',\n",
+       " 'chuy',\n",
+       " 'avarua',\n",
+       " 'thompson',\n",
+       " 'nioro',\n",
+       " 'benoy',\n",
+       " 'khatanga',\n",
+       " 'belmonte',\n",
+       " 'listvyanka',\n",
+       " 'moba',\n",
+       " 'arlit',\n",
+       " 'sao joao da barra',\n",
+       " 'kaa-khem',\n",
+       " 'portland',\n",
+       " 'ellensburg',\n",
+       " 'nizhniy kuranakh',\n",
+       " 'pisco',\n",
+       " 'zhanatas',\n",
+       " 'upernavik',\n",
+       " 'hasaki',\n",
+       " 'esperance',\n",
+       " 'vila',\n",
+       " 'tangshan',\n",
+       " 'oak ridge',\n",
+       " 'alekseyevka',\n",
+       " 'sao filipe',\n",
+       " 'port hardy',\n",
+       " 'bara',\n",
+       " 'bereda',\n",
+       " 'conceicao do coite',\n",
+       " 'half moon bay',\n",
+       " 'taoudenni',\n",
+       " 'trincomalee',\n",
+       " 'asuncion',\n",
+       " 'isangel',\n",
+       " 'labuhan',\n",
+       " 'bluefields',\n",
+       " 'arraial do cabo',\n",
+       " 'mahebourg',\n",
+       " 'kodiak',\n",
+       " 'raudeberg',\n",
+       " 'vestmannaeyjar',\n",
+       " 'whitehorse',\n",
+       " 'berdigestyakh',\n",
+       " 'kavieng',\n",
+       " 'chapleau',\n",
+       " 'roma',\n",
+       " 'mazagao',\n",
+       " 'rockport',\n",
+       " 'richards bay',\n",
+       " 'beloha',\n",
+       " 'andra',\n",
+       " 'yuancheng',\n",
+       " 'victoria point',\n",
+       " 'maltahohe',\n",
+       " 'lyubech',\n",
+       " 'digby',\n",
+       " 'lorengau',\n",
+       " 'fort nelson',\n",
+       " 'pangnirtung',\n",
+       " 'dunedin',\n",
+       " 'panzhihua',\n",
+       " 'sumbawa',\n",
+       " 'mount gambier',\n",
+       " 'saleaula',\n",
+       " 'aksu',\n",
+       " 'panalingaan',\n",
+       " 'wahran',\n",
+       " 'requena',\n",
+       " 'rivadavia',\n",
+       " 'ngunguru',\n",
+       " 'bhalki',\n",
+       " 'mogadishu',\n",
+       " 'tres arroyos',\n",
+       " 'ahuimanu',\n",
+       " 'junqueiro',\n",
+       " 'whitianga',\n",
+       " 'mozarlandia',\n",
+       " 'norman wells',\n",
+       " 'chapais',\n",
+       " 'narsaq',\n",
+       " 'benidorm',\n",
+       " 'tasiilaq',\n",
+       " 'mombasa',\n",
+       " 'kamenskoye',\n",
+       " 'yar-sale',\n",
+       " 'grindavik',\n",
+       " 'novyy urengoy',\n",
+       " 'svetlogorsk',\n",
+       " 'iqaluit',\n",
+       " 'nome',\n",
+       " 'la ronge',\n",
+       " 'mount isa',\n",
+       " 'chagda',\n",
+       " 'san jeronimo',\n",
+       " 'severo-kurilsk',\n",
+       " 'pennadam',\n",
+       " 'usinsk',\n",
+       " 'harper',\n",
+       " 'cacimba de dentro',\n",
+       " 'vuktyl',\n",
+       " 'metro',\n",
+       " 'godfrey',\n",
+       " 'nuuk',\n",
+       " 'fort wellington',\n",
+       " 'santo domingo',\n",
+       " 'juneau',\n",
+       " 'sorland',\n",
+       " 'westport',\n",
+       " 'kruisfontein',\n",
+       " 'mantua',\n",
+       " 'sydney',\n",
+       " 'fairbanks',\n",
+       " 'shenkursk',\n",
+       " 'calabozo',\n",
+       " 'belaya gora',\n",
+       " 'sarany',\n",
+       " 'great falls',\n",
+       " 'alta gracia',\n",
+       " 'elban',\n",
+       " 'coihaique',\n",
+       " 'lolua',\n",
+       " 'haines junction',\n",
+       " 'russell',\n",
+       " 'san francisco',\n",
+       " 'bambous virieux',\n",
+       " 'dezhou',\n",
+       " 'kargasok',\n",
+       " 'sorong',\n",
+       " 'gat',\n",
+       " 'andevoranto',\n",
+       " 'palu',\n",
+       " 'druzhba',\n",
+       " 'kilemary',\n",
+       " 'leku',\n",
+       " 'edson',\n",
+       " 'male',\n",
+       " 'martapura',\n",
+       " 'orsha',\n",
+       " 'nantucket',\n",
+       " 'ust-tsilma',\n",
+       " 'alayao',\n",
+       " 'guarapari',\n",
+       " 'qujing',\n",
+       " 'hastings',\n",
+       " 'cabo san lucas',\n",
+       " 'rio gallegos',\n",
+       " 'baykit',\n",
+       " 'salalah',\n",
+       " 'at-bashi',\n",
+       " 'thio',\n",
+       " 'kandrian',\n",
+       " 'saint anthony',\n",
+       " 'teguldet',\n",
+       " 'ravar',\n",
+       " 'tual',\n",
+       " 'inta',\n",
+       " 'pochutla',\n",
+       " 'aswan',\n",
+       " 'pevek',\n",
+       " 'cahabon',\n",
+       " 'nassau',\n",
+       " 'havre-saint-pierre',\n",
+       " 'laguna',\n",
+       " 'avera',\n",
+       " 'paramonga',\n",
+       " 'sierra vista',\n",
+       " 'davila',\n",
+       " 'ciledug',\n",
+       " 'carutapera',\n",
+       " 'bulgan',\n",
+       " 'gorontalo',\n",
+       " 'sai buri',\n",
+       " 'hollister',\n",
+       " 'tiarei',\n",
+       " 'qiongshan',\n",
+       " 'zig',\n",
+       " 'nador',\n",
+       " 'saint-paul',\n",
+       " 'carauari',\n",
+       " 'rawson',\n",
+       " 'alta floresta',\n",
+       " 'turka',\n",
+       " 'vryburg',\n",
+       " 'miedzyrzec podlaski',\n",
+       " 'bilaspur',\n",
+       " 'verkhnyaya inta',\n",
+       " 'columbia',\n",
+       " 'cagayan de tawi-tawi',\n",
+       " 'chhindwara',\n",
+       " 'batagay-alyta',\n",
+       " 'hamilton',\n",
+       " 'qui nhon',\n",
+       " 'dingle',\n",
+       " 'beipiao',\n",
+       " 'ndele',\n",
+       " 'chengde',\n",
+       " 'ardistan',\n",
+       " 'klamath falls',\n",
+       " 'son la',\n",
+       " 'sur',\n",
+       " 'vanino',\n",
+       " 'gornopravdinsk',\n",
+       " 'baft',\n",
+       " 'khandyga',\n",
+       " 'albanel',\n",
+       " 'faya',\n",
+       " 'komsomolskiy',\n",
+       " 'lebork',\n",
+       " 'alofi',\n",
+       " 'burns lake',\n",
+       " 'touros',\n",
+       " 'nanortalik',\n",
+       " 'puerto rico',\n",
+       " 'lebu',\n",
+       " 'barranca',\n",
+       " 'broome',\n",
+       " 'contai',\n",
+       " 'bintulu',\n",
+       " 'tigzirt',\n",
+       " 'ixtapa',\n",
+       " 'katsuura',\n",
+       " 'tawkar',\n",
+       " 'yumen',\n",
+       " 'wagar',\n",
+       " 'tingi',\n",
+       " 'vila franca do campo',\n",
+       " 'tsihombe',\n",
+       " 'chardara',\n",
+       " 'fortuna',\n",
+       " 'dalupirip',\n",
+       " 'namatanai',\n",
+       " 'cam ranh',\n",
+       " 'qandala',\n",
+       " 'slave lake',\n",
+       " 'maragogi',\n",
+       " 'palm valley',\n",
+       " 'soligalich',\n",
+       " 'katherine',\n",
+       " 'almeirim',\n",
+       " 'limbang',\n",
+       " 'havoysund',\n",
+       " 'yiyang',\n",
+       " 'marcona',\n",
+       " 'koutiala',\n",
+       " 'kamenka',\n",
+       " 'punta de bombon',\n",
+       " 'tolstoy-yurt',\n",
+       " 'karkaralinsk',\n",
+       " 'manado',\n",
+       " 'samalaeulu',\n",
+       " 'spoleto',\n",
+       " 'bilma',\n",
+       " 'magistralnyy',\n",
+       " 'saint george',\n",
+       " 'payakumbuh',\n",
+       " 'comodoro rivadavia',\n",
+       " 'umm durman',\n",
+       " 'ust-kuyga',\n",
+       " 'marrakesh',\n",
+       " 'tabiauea',\n",
+       " 'innerleithen',\n",
+       " 'ussel',\n",
+       " 'coolum beach',\n",
+       " 'port macquarie',\n",
+       " 'miraflores',\n",
+       " 'quatre cocos',\n",
+       " 'adrar',\n",
+       " 'chifeng',\n",
+       " 'umm kaddadah',\n",
+       " 'sept-iles',\n",
+       " 'puerto escondido',\n",
+       " 'kalugumalai',\n",
+       " 'monticello',\n",
+       " 'dawei',\n",
+       " 'hofn',\n",
+       " 'arrecife',\n",
+       " 'geraldton',\n",
+       " 'jajce',\n",
+       " 'saint-augustin',\n",
+       " 'arona',\n",
+       " 'caravelas',\n",
+       " 'guerrero negro',\n",
+       " 'el prat de llobregat',\n",
+       " 'bachaquero',\n",
+       " 'worth',\n",
+       " 'weihai',\n",
+       " 'mendota',\n",
+       " 'pitanga',\n",
+       " 'aksarka',\n",
+       " 'beni',\n",
+       " 'hirara',\n",
+       " 'kushmurun',\n",
+       " 'buchanan',\n",
+       " 'vrangel',\n",
+       " 'vesoul',\n",
+       " 'glendive',\n",
+       " 'omboue',\n",
+       " 'oyama',\n",
+       " 'mocambique',\n",
+       " 'cooma',\n",
+       " 'sidi ali',\n",
+       " 'iguatu',\n",
+       " 'korla',\n",
+       " 'tuy hoa',\n",
+       " 'sentyabrskiy',\n",
+       " 'santa rosa',\n",
+       " 'itarema',\n",
+       " 'shuangyang',\n",
+       " 'kainantu',\n",
+       " 'scarborough',\n",
+       " 'bangor',\n",
+       " 'melilla',\n",
+       " 'cascais',\n",
+       " 'tsaratanana',\n",
+       " 'bonavista',\n",
+       " 'jaicos',\n",
+       " 'olhao',\n",
+       " 'muisne',\n",
+       " 'fermoy',\n",
+       " 'katangli',\n",
+       " 'williams lake',\n",
+       " 'mehamn',\n",
+       " 'puerto narino',\n",
+       " 'jalu',\n",
+       " 'huarmey',\n",
+       " 'perelyub',\n",
+       " 'jerantut',\n",
+       " 'chicama',\n",
+       " 'troitsko-pechorsk',\n",
+       " 'meybod',\n",
+       " 'ambilobe',\n",
+       " 'lianzhou',\n",
+       " 'porbandar',\n",
+       " 'cortes',\n",
+       " 'inhambane',\n",
+       " 'gravdal',\n",
+       " 'royan',\n",
+       " 'muborak',\n",
+       " 'gusau',\n",
+       " 'bambanglipuro',\n",
+       " 'tandil',\n",
+       " 'buraydah',\n",
+       " 'yaguajay',\n",
+       " 'port hawkesbury',\n",
+       " 'visby',\n",
+       " 'belen',\n",
+       " 'itoman',\n",
+       " 'fort saint john',\n",
+       " 'awash',\n",
+       " 'varzelandia',\n",
+       " 'tutoia',\n",
+       " 'shiraz',\n",
+       " 'swan hill',\n",
+       " 'peniche',\n",
+       " 'lompoc',\n",
+       " 'rungata',\n",
+       " 'erzin',\n",
+       " 'sayyan',\n",
+       " 'henties bay',\n",
+       " 'sobolevo',\n",
+       " 'phan thiet',\n",
+       " 'rock sound',\n",
+       " 'bardiyah',\n",
+       " 'darnah',\n",
+       " 'omsukchan',\n",
+       " 'awbari',\n",
+       " 'oum hadjer',\n",
+       " 'ardmore',\n",
+       " 'rolim de moura',\n",
+       " 'okhotsk',\n",
+       " 'moen',\n",
+       " 'kuryk',\n",
+       " 'kiama',\n",
+       " 'taltal',\n",
+       " 'tsogni',\n",
+       " 'zyryanka',\n",
+       " 'mayumba',\n",
+       " 'minsk',\n",
+       " 'ngukurr',\n",
+       " 'mys shmidta',\n",
+       " 'fayaoue',\n",
+       " 'sedalia',\n",
+       " 'limon',\n",
+       " 'dakar',\n",
+       " 'la spezia',\n",
+       " 'mattru',\n",
+       " 'yermakovskoye',\n",
+       " 'kampot',\n",
+       " 'okha',\n",
+       " 'praia da vitoria',\n",
+       " 'takoradi',\n",
+       " 'chinna salem',\n",
+       " 'kadaya',\n",
+       " 'vorobyevka',\n",
+       " 'krasnozerskoye',\n",
+       " 'keetmanshoop',\n",
+       " 'guiratinga',\n",
+       " 'palabuhanratu',\n",
+       " 'kabanjahe',\n",
+       " 'sangar',\n",
+       " 'shaoguan',\n",
+       " 'achisay',\n",
+       " 'aborlan',\n",
+       " 'san luis de palenque',\n",
+       " 'kazalinsk',\n",
+       " 'marsh harbour',\n",
+       " 'estelle',\n",
+       " 'porto santo',\n",
+       " 'palmer',\n",
+       " 'claveria',\n",
+       " 'bilibino',\n",
+       " 'mayo',\n",
+       " 'dergachi',\n",
+       " 'kipushi',\n",
+       " 'nanma',\n",
+       " 'nabire',\n",
+       " 'labis',\n",
+       " 'santiago de cao',\n",
+       " 'bayburt',\n",
+       " 'sao francisco',\n",
+       " 'pareora',\n",
+       " 'buta',\n",
+       " 'tsiroanomandidy',\n",
+       " 'muli',\n",
+       " 'calvinia',\n",
+       " 'sakakah',\n",
+       " 'dera din panah',\n",
+       " 'kodinsk']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities"
    ]
   },
   {
@@ -1852,7 +2483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
