--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "# Final Heatmap Image\n",
-    "![This should work](heatmap.png \"Heatmap\")"
+    "![This should work](heatmap.png)"
    ]
   },
   {
